<?xml version="1.0" encoding="utf-8"?>
<!--
  CVM - Computer Vision Mobile.
  Copyright (C) 2010 CVM Luis Ciudad García
  
  File: strings.xml - This file is part of CVM.
  
  CVM is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  CVM is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with CVM.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">CVM</string>
    <string name="main_wellcome">Wellcome to <b>CVM!</b></string>
    <string name="main_help">Press <i>Menu</i> to select an option.</string>
    
    <string name="demo_exec">Run Demos</string>
    <string name="test_exec">Run Tests</string>
    
    <string name="demo_transfo">Transformations Demo</string>
    <string name="demo_filters">Filters Demo</string>
        <string name="filters_selector">Select a filter</string>
        <string name="images_selector">Select an image</string>
        
    <string name="test_matrix">CvmMatrix Test</string>
    <string name="test_matrixtypes">Matrix Types Test</string>
    <string name="test_channel">CvmChannel Test</string>
    <string name="test_image">CvmImage Test</string>
    <string name="test_colorspace">Color Spaces Test</string>
</resources>
